ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-ingress
spec:
  rules:
    - host: monyslim.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-api-service
                port:
                  number: 80
